// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressCard component renders correctly when user is logged in should render correct lesson progress for 0% completion 1`] = `
<div>
  <div
    class="progress-card__container card shadow-sm mt-3 bg-primary text-white px-3 px-xl-4 py-4 border-0"
  >
    <h4
      class="progress-card__title text-center"
    >
      You're off to a great start!
    </h4>
    <div
      class="d-block d-xl-none"
    >
      <div
        class="bg-white my-3 rounded"
      >
        <div
          class="progress-card__horizontal bg-primary d-flex rounded-start"
        >
          <div
            class="align-self-center px-1 ms-auto fw-bold"
          >
            0
            %
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-none d-xl-flex justify-content-center"
    >
      <div
        class="progress-card__wrapper d-flex align-items-center"
      >
        <svg
          viewBox="0 0 40 40"
          width="65px"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#3a22b8"
            stroke-width="4.5"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#fff"
            stroke-dasharray="0 100"
            stroke-dashoffset="20"
            stroke-width="4.5"
          />
          <g
            class="circle-label"
          >
            <text
              color="#fff"
              fill="#fff"
              style="font: sans-serif 10px bold 10px;"
              x="15"
              y="23"
            >
              0
              <tspan
                font-size="8px"
              >
                %
              </tspan>
            </text>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="mt-3 text-center"
    >
      Join us on
      <a
        class="progress-newuser__chatlink text-white noUnderline"
        href="https://discord.gg/c0d3"
        rel="noopener noreferrer"
        target="_blank"
      >
        <p
          class="fw-bold d-inline"
        >
          Discord
        </p>
      </a>
      to ask your questions. Start by setting up your development environment and then follow the lessons in the course.
    </div>
    <div
      class="mt-4 d-flex flex-column"
    >
      <a
        class="btn btn-light progress-card__button mt-2 text-primary noUnderline"
        href="/docs/setup"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;

exports[`ProgressCard component renders correctly when user is logged in should render correct lesson progress for 25% completion 1`] = `
<div>
  <div
    class="progress-card__container card shadow-sm mt-3 bg-primary text-white px-3 px-xl-4 py-4 border-0"
  >
    <h4
      class="progress-card__title text-center"
    >
      Keep up the great work!
    </h4>
    <div
      class="d-block d-xl-none"
    >
      <div
        class="bg-white my-3 rounded"
      >
        <div
          class="progress-card__horizontal bg-primary d-flex rounded-start"
          style="width: 25%;"
        >
          <div
            class="align-self-center px-1 ms-auto fw-bold"
          >
            25
            %
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-none d-xl-flex justify-content-center"
    >
      <div
        class="progress-card__wrapper d-flex align-items-center"
      >
        <svg
          viewBox="0 0 40 40"
          width="65px"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#3a22b8"
            stroke-width="4.5"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#fff"
            stroke-dasharray="25 75"
            stroke-dashoffset="20"
            stroke-width="4.5"
          />
          <g
            class="circle-label"
          >
            <text
              color="#fff"
              fill="#fff"
              style="font: sans-serif 10px bold 10px;"
              x="11"
              y="23"
            >
              25
              <tspan
                font-size="8px"
              >
                %
              </tspan>
            </text>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="mt-3 text-center"
    >
      Join us on
      <a
        class="progress-newuser__chatlink text-white noUnderline"
        href="https://discord.gg/c0d3"
        rel="noopener noreferrer"
        target="_blank"
      >
        <p
          class="fw-bold d-inline"
        >
          Discord
        </p>
      </a>
      to ask your questions. Start by setting up your development environment and then follow the lessons in the course.
    </div>
    <div
      class="mt-4 d-flex flex-column"
    >
      <a
        class="btn btn-light progress-card__button mt-2 text-primary noUnderline"
        href="/docs/setup"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;

exports[`ProgressCard component renders correctly when user is logged in should render correct lesson progress for 75% completion 1`] = `
<div>
  <div
    class="progress-card__container card shadow-sm mt-3 bg-primary text-white px-3 px-xl-4 py-4 border-0"
  >
    <h4
      class="progress-card__title text-center"
    >
      Well done! You're over half way!
    </h4>
    <div
      class="d-block d-xl-none"
    >
      <div
        class="bg-white my-3 rounded"
      >
        <div
          class="progress-card__horizontal bg-primary d-flex rounded-start"
          style="width: 75%;"
        >
          <div
            class="align-self-center px-1 ms-auto fw-bold"
          >
            75
            %
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-none d-xl-flex justify-content-center"
    >
      <div
        class="progress-card__wrapper d-flex align-items-center"
      >
        <svg
          viewBox="0 0 40 40"
          width="65px"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#3a22b8"
            stroke-width="4.5"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#fff"
            stroke-dasharray="75 25"
            stroke-dashoffset="20"
            stroke-width="4.5"
          />
          <g
            class="circle-label"
          >
            <text
              color="#fff"
              fill="#fff"
              style="font: sans-serif 10px bold 10px;"
              x="11"
              y="23"
            >
              75
              <tspan
                font-size="8px"
              >
                %
              </tspan>
            </text>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="mt-3 text-center"
    >
      Join us on
      <a
        class="progress-newuser__chatlink text-white noUnderline"
        href="https://discord.gg/c0d3"
        rel="noopener noreferrer"
        target="_blank"
      >
        <p
          class="fw-bold d-inline"
        >
          Discord
        </p>
      </a>
      to ask your questions. Start by setting up your development environment and then follow the lessons in the course.
    </div>
    <div
      class="mt-4 d-flex flex-column"
    >
      <a
        class="btn btn-light progress-card__button mt-2 text-primary noUnderline"
        href="/docs/setup"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;

exports[`ProgressCard component renders correctly when user is logged in should render correct lesson progress for 100% completion 1`] = `
<div>
  <div
    class="progress-card__container card shadow-sm mt-3 bg-primary text-white px-3 px-xl-4 py-4 border-0"
  >
    <h4
      class="progress-card__title text-center"
    >
      Congratulations! You've finished the course!
    </h4>
    <div
      class="d-block d-xl-none"
    >
      <div
        class="bg-white my-3 rounded"
      >
        <div
          class="progress-card__horizontal bg-primary d-flex rounded"
          style="width: 100%;"
        >
          <div
            class="align-self-center px-1 ms-auto fw-bold"
          >
            100
            %
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-none d-xl-flex justify-content-center"
    >
      <div
        class="progress-card__wrapper d-flex align-items-center"
      >
        <svg
          viewBox="0 0 40 40"
          width="65px"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#3a22b8"
            stroke-width="4.5"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#fff"
            stroke-dasharray="100 0"
            stroke-dashoffset="20"
            stroke-width="4.5"
          />
          <g
            class="circle-label"
          >
            <text
              color="#fff"
              fill="#fff"
              style="font: sans-serif 10px bold 10px;"
              x="9"
              y="23"
            >
              100
              <tspan
                font-size="8px"
              >
                %
              </tspan>
            </text>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="mt-3 text-center"
    >
      Join us on
      <a
        class="progress-newuser__chatlink text-white noUnderline"
        href="https://discord.gg/c0d3"
        rel="noopener noreferrer"
        target="_blank"
      >
        <p
          class="fw-bold d-inline"
        >
          Discord
        </p>
      </a>
      to ask your questions. Start by setting up your development environment and then follow the lessons in the course.
    </div>
    <div
      class="mt-4 d-flex flex-column"
    >
      <a
        class="btn btn-light progress-card__button mt-2 text-primary noUnderline"
        href="/docs/setup"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;

exports[`ProgressCard component renders correctly when user is not logged in should not render lesson progress if a user is not logged in 1`] = `
<div>
  <div
    class="progress-card__container card shadow-sm mt-3 bg-primary text-white px-3 px-xl-4 py-4 border-0"
  >
    <h4
      class="progress-card__title mt-4 text-center "
    >
      Join C0D3 now and start your software engineering journey!
    </h4>
    <div
      class="mt-3 text-center"
    >
      Join us on
      <a
        class="progress-newuser__chatlink text-white noUnderline"
        href="https://discord.gg/c0d3"
        rel="noopener noreferrer"
        target="_blank"
      >
        <p
          class="fw-bold d-inline"
        >
          Discord
        </p>
      </a>
      to ask your questions. Start by setting up your development environment and then follow the lessons in the course.
    </div>
    <div
      class="mt-4 d-flex flex-column"
    >
      <a
        class="btn btn-light progress-card__button mt-2 text-primary noUnderline"
        href="/docs/setup"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;
